Fix messenger section overflow scrollbar missing

--- a/css/styles.css
+++ b/css/styles.css
@@ -415,10 +415,10 @@ img#icon-lock {
   }
 
   .message-wrap.flex-row .message {
-    margin-right: 5px;
+    margin-right: 10px;
   }
 
   .message-wrap.flex-row-reverse .message {
-    margin-left: 5px;
+    margin-left: 10px;
   }
 }
